--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:17.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
 
+    implementation 'com.google.mlkit:digital-ink-recognition:17.0.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
