--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Patterntriggers">
+        <activity android:name=".activities.LauncherActivity"></activity>
         <activity
             android:name=".activities.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.DrawPatternActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.SettingsActivity"
             android:screenOrientation="portrait">
@@ -39,6 +40,9 @@
                 android:resource="@xml/file_paths" />
         </provider>
     </application>
+    <queries>
+        <package android:name="app.i.want.to.query" />
+    </queries>
 
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -47,9 +51,5 @@
     <uses-permission
         android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
-
-    <queries>
-        <package android:name="app.i.want.to.query" />
-    </queries>
 
 </manifest>
