--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Patterntriggers">
-        <activity android:name=".activities.LauncherActivity"></activity>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.LauncherActivity"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activities.SettingsActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activities.DrawPatternActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name=".activities.MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
